# LinguaFlash

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
docs/plans/: 2026-01-13-linguaflash-design.md  2026-01-13-linguaflash-implementation.md  2026-01-13-ttime-design.md  2026-01-13-ttime-implementation.md  2026-01-14-custom-shortcuts-design.md  2026-01-14-custom-shortcuts-plan.md  2026-01-16-remove-esc-hide-window.md  2026-01-17-excel-translation-design.md  2026-01-17-excel-translation-plan.md  2026-01-18-excel-concurrency-design.md  2026-01-18-excel-concurrency-plan.md  2026-01-25-excel-format-preservation-plan.md  2026-01-25-excel-translation-format-preservation.md
src/: App.tsx  popup-main.tsx  popup.html  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  main.rs  popup.rs  shortcut.rs  tray.rs
src-tauri/src/excel/: mod.rs  reader.rs  translator.rs  writer.rs
src-tauri/src/translation/: cache.rs  glm.rs  mod.rs  ollama.rs
src/components/: EngineSettings.tsx  LanguageSelector.tsx  Layout.tsx  ShortcutInput.tsx  Sidebar.tsx  TermsSettings.tsx  TextArea.tsx  TitleBar.tsx
src/pages/: ExcelPage.tsx  HistoryPage.tsx  PopupPage.tsx  SettingsPage.tsx  TranslatePage.tsx
src/services/: cache.ts  database.ts  excel.ts  shortcut.ts  terms.ts  translation.ts
src/stores/: excelStore.ts  historyStore.ts  settingsStore.ts  termsStore.ts  translateStore.ts
