[package]
name = "ttime"
version = "0.1.0"
description = "TTime - Cross-platform Translation Software"
authors = ["you"]
edition = "2021"

[lib]
name = "ttime_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
